--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,27 @@
     box-sizing: border-box;
 }
 
+
+.skip-links{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .skip-links a{
+    position: absolute;
+    top: -3em;
+    background-color: black;
+    color:white;
+    padding: .5em 1em;
+    font-weight: bold;
+  }
+  
+  .skip-links a:focus{
+    top: 0;
+  }
+
+
 body {
     font-family: 'Karla', sans-serif;
     background-color: #f3f0e9;
@@ -33,6 +54,8 @@ h3 {
 p {
     font-size: 16px;
 }
+
+
 
 header {
     background-color: #000000;
